# pdf-compression

./: .gitignore  LICENSE  README.md  app.py  build.bat  build.sh  build_installer.bat  get_hashes.bat  get_hashes.sh  installer.iss  main.py  pdf_compress.py  pyproject.toml
src/: __init__.py  main.py
src/compression/: __init__.py  image_optimizer.py  pdf_processor.py
src/gui/: __init__.py  app.py  path_validator.py
tests/: conftest.py  test_image_optimizer.py  test_path_validator.py  test_pdf_processor.py
