[project]
name = "pdf-compression"
version = "0.0.3"
description = "simple app to compress images in pdfs using pyvips and pymupdf"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "pyvips>=2.2.3",
    "pyvips-binary>=2.2.3",
    "pyinstaller>=6.0.0",
    "ruff>=0.14.5",
]

[project.optional-dependencies]
dev = [
"pytest>=8.0.0",
"pytest-mock>=3.12.0",
"basedpyright>=1.32.1"
]



[tool.basedpyright]
typeCheckingMode = "standard"
reportDuplicateImport = true
reportConstantRedefinition = true
reportMissingTypeArgument = false
reportPrivateUsage = true
reportInconsistentConstructor = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedVariable = true
reportUndefinedVariable = true
reportMissingTypeStubs = false
